Updated to use a private type contain Com object wrapped and private this variable
Naming of the private  type is "T" + module name i.e. default is ComCoClass.Name  or  new class module name selected.
Com Object in  the private type is type library name  + ComCoClass.Name
Eg.
Private Type TDateTime
   DotNetLibDateTime As DotNetLib.DateTime
End Type

Private this As TDateTime

--- a/C#/ComRefactorConsoleRDComponents/Output/DateTime.cls
+++ b/C#/ComRefactorConsoleRDComponents/Output/DateTime.cls
@@ -14,22 +14,26 @@ Attribute VB_Exposed  = False
 
 Option Explicit
 
-Private mDateTime As DotNetLib.DateTime
+Private Type TDateTime
+   DotNetLibDateTime As DotNetLib.DateTime
+End Type
+
+Private this As TDateTime
 
 Private Sub Class_Initialize()
-   Set mDateTime = New DotNetLib.DateTime
+   Set this.DotNetLibDateTime = New DotNetLib.DateTime
 End Sub
 
 Private Sub Class_Terminate()
-   Set mDateTime = Nothing
+   Set this.DotNetLibDateTime = Nothing
 End Sub
 
 Friend Property Get ComObject() As DotNetLib.DateTime
-   Set ComObject = mDateTime
+   Set ComObject = this.DotNetLibDateTime
 End Property
 
 Friend Property Set ComObject(ByVal objDateTime As DotNetLib.DateTime)
-   Set ComObject = mDateTime
+   Set ComObject = this.DotNetLibDateTime
 End Property
 
 Friend Property Get Self() As DateTime
